--- a/AppVendasWeb/AppVendasWeb/Views/Produtos/Edit.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Produtos/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Preco" class="control-label"></label>
-                <input asp-for="Preco" class="form-control" />
+                <input asp-for="Preco" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
