Modificações em todas as páginas principais

--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Index.cshtml
@@ -63,7 +63,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.CadastroAtivo)
                     </td>
-                    <td class="text">
+                    <td class="text-end">
                         <a class="text-decoration-none link-light" asp-action="Edit" asp-route-id="@item.ClienteId">
                             <svg class="mx-2" bootstrap-icon="PencilFill" width="16" height="16" aria-label="Adicionar"></svg>
 
