--- a/AppVendasWeb/AppVendasWeb/Views/Categorias/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Categorias/Create.cshtml
@@ -9,23 +9,24 @@
 <h4>Categoria</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 ">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CategoriaNome" class="control-label"></label>
+            <div class="form-group form-check form-switch my-3">
+                <label asp-for="CategoriaNome" class="control-label form-group my-1 "></label>
                 <input asp-for="CategoriaNome" class="form-control" />
                 <span asp-validation-for="CategoriaNome" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group form-check form-switch my-2">
+                <input type="submit" value="Criar" class="btn btn-primary" />
+
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="form-group form-check form-switch ">
+    <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
 </div>
 
 @section Scripts {
