--- a/AppVendasWeb/AppVendasWeb/Views/Produtos/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Produtos/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@model IEnumerable<AppVendasWeb.Models.Produto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Produtos";
 }
 
-<h1>Index</h1>
+<h1 class="display-5 text-light my-5">Produtos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-lg btn-outline-light d-inline-flex align-items-center"> <svg class="me-2" bootstrap-icon="PlusLg" width="20" height="20" aria-label="Adicionar"></svg>Adicionar</a>
 </p>
-<table class="table">
+<table class="table table-dark table-striped table-hover" >
     <thead>
         <tr>
             <th>
@@ -37,10 +37,16 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Categoria.CategoriaNome)
                 </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ProdutoId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ProdutoId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ProdutoId">Delete</a>
+                <td class="text-end">
+                    <a class="text-decoration-none link-light" asp-action="Edit" asp-route-id="@item.ProdutoId">
+                        <svg class="mx-2" bootstrap-icon="PencilFill" width="16" height="16" aria-label="Adicionar"></svg>
+                    </a> |
+                    <a class="text-decoration-none link-light" asp-action="Details" asp-route-id="@item.ProdutoId">
+                        <svg class="mx-2" bootstrap-icon="CardList" width="16" height="16" aria-label="Adicionar"></svg>
+                    </a> |
+                    <a class="text-decoration-none link-light" asp-action="Delete" asp-route-id="@item.ProdutoId">
+                        <svg class="mx-2" bootstrap-icon="Trash" width="16" height="16" aria-label="Adicionar"></svg>
+                    </a>
                 </td>
             </tr>
         }
