--- a/AppVendasWeb/AppVendasWeb/Views/Vendas/Details.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Vendas/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.NotaFiscal)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClientId)
+            @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClientId)
+            @Html.DisplayFor(model => model.Cliente.CPF)
         </dd>
     </dl>
 </div>
