--- a/AppVendasWeb/AppVendasWeb/Views/Vendas/Edit.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Vendas/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="NotaFiscal" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ClientId" class="control-label"></label>
-                <input asp-for="ClientId" class="form-control" />
-                <span asp-validation-for="ClientId" class="text-danger"></span>
+                <label asp-for="ClienteId" class="control-label"></label>
+                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                <span asp-validation-for="ClienteId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
