--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AppVendasWeb.Models.Cliente
 
 @{
-    ViewData["Title"] = "Cadastrar Novo Usuário";
+    ViewData["Title"] = "Cadastrar Novo CLiente";
 }
 
 <h1 class="display-5 text-light my-5">Cadastrar Novo Cliente</h1>
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" class="form-control" />
+                <input asp-for="CPF" id="CPF" class="form-control" />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Celular" class="control-label"></label>
-                <input asp-for="Celular" class="form-control" />
+                <input asp-for="Celular" id="Celular" class="form-control" />
                 <span asp-validation-for="Celular" class="text-danger"></span>
             </div>
             <div class="form-group">
