--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Details.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Details.cshtml
@@ -54,7 +54,7 @@
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ClienteId">Editar</a> |
+<div class="form-group my-2">
+    <input type="submit" value="Salvar" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
 </div>
