--- a/AppVendasWeb/AppVendasWeb/Views/Categorias/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Categorias/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Categoria</h4>
 <hr />
@@ -17,18 +17,18 @@
                 <input asp-for="CategoriaNome" class="form-control" />
                 <span asp-validation-for="CategoriaNome" class="text-danger"></span>
             </div>
-            <div class="form-group form-check form-switch my-2">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+            <div class="form-group form-check form-switch ">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
 
             </div>
         </form>
     </div>
 </div>
 
-<div class="form-group form-check form-switch ">
-    <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
-</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
