--- a/AppVendasWeb/AppVendasWeb/Views/Categorias/Details.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Categorias/Details.cshtml
@@ -10,15 +10,15 @@
     <h4>Categoria</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CategoriaNome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CategoriaNome)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.CategoriaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="form-group my-2">
+    <input type="submit" value="Salvar" class="btn btn-primary" />
+    <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
 </div>
