--- a/AppVendasWeb/AppVendasWeb/Views/Categorias/Edit.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Categorias/Edit.cshtml
@@ -18,16 +18,15 @@
                 <input asp-for="CategoriaNome" class="form-control" />
                 <span asp-validation-for="CategoriaNome" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group my-2">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
-</div>
+
 
 @section Scripts {
     @{
