--- a/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Details.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Details.cshtml
@@ -10,33 +10,33 @@
     <h4>ItemDaVenda</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Produto.Descricao)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Venda)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Venda.VendaId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Quantidade)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Valor)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ItemDaVendaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="form-group my-2">
+    <input type="submit" value="Salvar" class="btn btn-primary" />
+    <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
 </div>
