--- a/AppVendasWeb/AppVendasWeb/Views/Produtos/Delete.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Produtos/Delete.cshtml
@@ -8,7 +8,6 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Produto</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -33,7 +32,8 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProdutoId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
+
     </form>
 </div>
