--- a/AppVendasWeb/AppVendasWeb/Views/Produtos/Details.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Produtos/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ProdutoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <input type="submit" value="Salvar" class="btn btn-primary" />
+    <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
 </div>
