--- a/AppVendasWeb/AppVendasWeb/Views/Produtos/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Produtos/Index.cshtml
@@ -38,13 +38,20 @@
                     @Html.DisplayFor(modelItem => item.Categoria.CategoriaNome)
                 </td>
                 <td class="text-end">
-                    <a class="text-decoration-none link-light" asp-action="Edit" asp-route-id="@item.ProdutoId">
+                    <a class="text-decoration-none link-info" asp-action="Edit" asp-route-id="@item.ProdutoId">
                         <svg class="mx-2" bootstrap-icon="PencilFill" width="16" height="16" aria-label="Adicionar"></svg>
+
                     </a> |
-                    <a class="text-decoration-none link-light" asp-action="Details" asp-route-id="@item.ProdutoId">
+
+
+                    <a class="text-decoration-none link-warning" asp-action="Details" asp-route-id="@item.ProdutoId">
                         <svg class="mx-2" bootstrap-icon="CardList" width="16" height="16" aria-label="Adicionar"></svg>
+
                     </a> |
-                    <a class="text-decoration-none link-light" asp-action="Delete" asp-route-id="@item.ProdutoId">
+
+
+
+                    <a class="text-decoration-none link-danger" asp-action="Delete" asp-route-id="@item.ProdutoId">
                         <svg class="mx-2" bootstrap-icon="Trash" width="16" height="16" aria-label="Adicionar"></svg>
                     </a>
                 </td>
