--- a/AppVendasWeb/AppVendasWeb/Views/Shared/_Layout.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AppVendasWeb.styles.css" asp-append-version="true" />
 </head>
-<body class="bg-dark bg-gradient text-light ">
+<body style="background: rgb(2,0,36)" class="bg-gradient text-light ">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark text-light border-bottom box-shadow mb-3">
+        <nav style="background: rgb(2,0,36)" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark  text-light border-bottom box-shadow mb-3">
             <div class="container-fluid ">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppVendasWeb</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -51,7 +51,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-light bg-dark text-center">
+    <footer style="background:rgb(2,0,36)" class="border-top footer text-light text-center">
         <div class="container">
             &copy; 2024 - AppVendasWeb - <a class="text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a>
         </div>
