--- a/AppVendasWeb/AppVendasWeb/Views/Vendas/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Vendas/Index.cshtml
@@ -53,16 +53,17 @@
 
                     </a> |
 
-                    <a class="text-decoration-none link-light" asp-action="Edit" asp-route-id="@item.VendaId">
-                        <svg class="mx-2" bootstrap-icon="PencilFill" width="16" height="16" aria-label="Adicionar"></svg>
+
+
+                    <a class="text-decoration-none link-warning" asp-action="Details" asp-route-id="@item.VendaId">
+                        <svg class="mx-2" bootstrap-icon="CardList" width="16" height="16" aria-label="Adicionar"></svg>
 
                     </a> |
 
 
 
-                    <a class="text-decoration-none link-light" asp-action="Delete" asp-route-id="@item.VendaId">
+                    <a class="text-decoration-none link-danger" asp-action="Delete" asp-route-id="@item.VendaId">
                         <svg class="mx-2" bootstrap-icon="Trash" width="16" height="16" aria-label="Adicionar"></svg>
-
                     </a>
                 </td>
             </tr>
