--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
@@ -21,10 +21,13 @@
                 <input asp-for="CPF" id="CPF" class="form-control" />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" type="email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+            <div class=" form-group mt-3">
+                <label class="visually-hidden" asp-for="Email" class="control-label" for="email">Email</label>
+                <div class="input-group">
+                    <div class="input-group-text ">@@</div>
+                    <input asp-for="Email" type="email" class="form-control" id="email" placeholder="Digite Seu E-mail..." />
+                    <p asp-validation-for="Email" class="text-danger"></p>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
