--- a/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Create.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="VendaId" class="control-label"></label>
-                <select asp-for="VendaId" class="form-control" asp-items="ViewBag.VendaId"></select>
+                <input asp-for="VendaId" class="form-control" readonly />
             </div>
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label"></label>
