--- a/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Index.cshtml
@@ -35,7 +35,7 @@
                     @Html.DisplayFor(modelItem => item.Produto.Descricao)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Venda.VendaId)
+                    @Html.DisplayFor(modelItem => item.Venda.NotaFiscal)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Quantidade)
