--- a/AppVendasWeb/AppVendasWeb/Views/Vendas/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Vendas/Index.cshtml
@@ -55,8 +55,8 @@
 
 
 
-                    <a class="text-decoration-none link-warning" asp-action="Details" asp-route-id="@item.VendaId">
-                        <svg class="mx-2" bootstrap-icon="CardList" width="16" height="16" aria-label="Adicionar"></svg>
+                    <a class="text-decoration-none link-warning" asp-action="Edit" asp-route-id="@item.VendaId">
+                        <svg class="mx-2" bootstrap-icon="PencilFill" width="16" height="16" aria-label="Adicionar"></svg>
 
                     </a> |
 
